...
        case .wallet: "creditcard.fill"
        }
    }

    var label: String {
        switch self {
        case .home: "Home"
        case .videos: "Videos"
        case .createPost: "New Post"
        case .explore: "Explore"
        case .wallet: "Wallet"
        }
    }
...
